CHORE: Documented project with swagger
